[gd_scene load_steps=64 format=2]

[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/ForestPath/Normal/Updated/ForestPathWalkingLayer(Update).png" type="Texture" id=1]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Mansion/Normal/Updated/VillaMansionWalkingLayer(Updated).png" type="Texture" id=2]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Village/Normal/Updated/VillageWalkingLayer(Update).png" type="Texture" id=3]
[ext_resource path="res://scenes/dialog/PassiveDialog/PassiveDialog.gd" type="Script" id=4]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/ForestPath/Normal/Updated/ForestPathStuffLayer(Update).png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/TreeRat.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/black-chancery/BLKCHCRY.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://scripts/SquirrelBehavior.gd" type="Script" id=8]
[ext_resource path="res://scenes/dialog/SoundBox/SoundBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Mansion/Normal/Updated/VillaMansionStuffLayer(Updated).png" type="Texture" id=10]
[ext_resource path="res://scripts/OneShotDialog.gd" type="Script" id=11]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Village/Decayed/Updated/VillageDecayWalkingLayer(Updated).png" type="Texture" id=12]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/WitchHut/Normal/Updated/WitchHutStuffLayer(Updated).png" type="Texture" id=13]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/WitchHut/Normal/Updated/WitchHutWalkingLayer(Updated).png" type="Texture" id=14]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Village/Normal/Updated/VillagesTuffLayer(Updated).png" type="Texture" id=15]
[ext_resource path="res://scenes/Act3/Act3.gd" type="Script" id=16]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/ForestPath/Decayed/ForestPathDecayWalkingLayer.png" type="Texture" id=17]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/ForestPath/Decayed/ForestPathDecayStuffLayer.png" type="Texture" id=18]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/WitchHut/Decayed/WitchHutDecayWalkingLayer.png" type="Texture" id=19]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/WitchHut/Decayed/WitchHutDecayStuffLayer.png" type="Texture" id=20]
[ext_resource path="res://assets/audio/sfx/Doors/Prefabs/DoorSFXBad.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Mansion/Decayed/VillaMansionDecayedWalkingLayer.png" type="Texture" id=22]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Mansion/Decayed/VillaMansionDecayedStuffLayer.png" type="Texture" id=23]
[ext_resource path="res://assets/Cyndaquill/Finalized Scene Sprites/Village/Decayed/Updated/VillageDecayStuffLayer(Updated).png" type="Texture" id=24]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise011.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise014.tscn" type="PackedScene" id=26]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise008.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise017.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise013.tscn" type="PackedScene" id=29]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise009.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/JacobTestScenes/PrototypeGame/FootstepManager.tscn" type="PackedScene" id=31]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise012.tscn" type="PackedScene" id=32]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise018.tscn" type="PackedScene" id=33]
[ext_resource path="res://scripts/WalkingAreas.gd" type="Script" id=34]
[ext_resource path="res://scripts/MusicAreas.gd" type="Script" id=35]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise015.tscn" type="PackedScene" id=36]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise016.tscn" type="PackedScene" id=37]
[ext_resource path="res://scenes/player/Animation/WobbleAnimation.tres" type="Animation" id=38]
[ext_resource path="res://scenes/player/PlayerDialogController.gd" type="Script" id=39]
[ext_resource path="res://scenes/player/LetterSoundController.gd" type="Script" id=40]
[ext_resource path="res://scripts/player/movement.gd" type="Script" id=41]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise002.tscn" type="PackedScene" id=42]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise005.tscn" type="PackedScene" id=43]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise006.tscn" type="PackedScene" id=44]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise010.tscn" type="PackedScene" id=45]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise004.tscn" type="PackedScene" id=46]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise007.tscn" type="PackedScene" id=47]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise003.tscn" type="PackedScene" id=48]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise001.tscn" type="PackedScene" id=49]
[ext_resource path="res://assets/sprites/MinijamPlayerucus.png" type="Texture" id=50]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="CircleShape2D" id=3]
radius = 123.016

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 164.75, 89.625 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 138.5, 34.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 61.25, 89.75 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9.5, 16 )

[sub_resource type="DynamicFont" id=2]
size = 17
outline_size = 1
font_data = ExtResource( 7 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform vec4 color : hint_color;
uniform float multiplier = 0.2;
uniform float softness = 0.2;

void fragment(){
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/color = null
shader_param/multiplier = 0.409
shader_param/softness = 0.697

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 385, 384 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 576.5, 480.75 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 960, 575.75 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 960.25, 422 )

[node name="Act3" type="Node2D"]
script = ExtResource( 16 )

[node name="GroundLayerCursed" type="Node2D" parent="."]

[node name="ForestPath" type="Sprite" parent="GroundLayerCursed"]
position = Vector2( -1544, 480 )
scale = Vector2( 3, 3 )
texture = ExtResource( 17 )

[node name="Town" type="Sprite" parent="GroundLayerCursed"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 12 )

[node name="Villa" type="Sprite" parent="GroundLayerCursed"]
position = Vector2( 1912, 462 )
scale = Vector2( 3, 3 )
texture = ExtResource( 22 )

[node name="Cabin" type="Sprite" parent="GroundLayerCursed"]
position = Vector2( -1937, 1344 )
scale = Vector2( 3, 3 )
texture = ExtResource( 19 )

[node name="GroundLayer" type="Node2D" parent="."]

[node name="ForestPath" type="Sprite" parent="GroundLayer"]
position = Vector2( -1544, 480 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Town" type="Sprite" parent="GroundLayer"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Villa" type="Sprite" parent="GroundLayer"]
position = Vector2( 1912, 462 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Cabin" type="Sprite" parent="GroundLayer"]
position = Vector2( -1937, 1344 )
scale = Vector2( 3, 3 )
texture = ExtResource( 14 )

[node name="NPCs" type="Node2D" parent="."]

[node name="Squirrel" type="Sprite" parent="NPCs"]
position = Vector2( 433.174, 356.907 )
texture = ExtResource( 6 )
script = ExtResource( 8 )
steps = 4
step_length = 30.0
arc_height = 10.0
step_delay = 0.2
idle_time = 7.0
idle_flip_min = 1.0
idle_flip_max = 3.0

[node name="DialogRunner" type="Node2D" parent="NPCs/Squirrel"]
z_index = 1
script = ExtResource( 4 )
text_lable_path = NodePath("DialogText")
dialogs = [ "tst...", "eep!", "merp?", "Where are my nuts?", "I put my nuts here somewhere.", "ANY size pizza can be a personal pizza if you truly believe in yourself." ]
letter_time = 0.1
hide_time = 3.0
random = true
random_time_min = 2.0
random_time_max = 7.0

[node name="DialogText" type="Label" parent="NPCs/Squirrel/DialogRunner"]
margin_left = -48.0
margin_top = 17.0
margin_right = 45.0
margin_bottom = 55.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.439216, 0.439216, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="BoundingWalls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="BoundingWalls"]

[node name="InvisableWall" type="CollisionPolygon2D" parent="BoundingWalls/StaticBody2D"]
polygon = PoolVector2Array( 951, 1041, 953, 571, 1090, 571, 1089, 725, 1590, 727, 1593, 814, 2872, 814, 2869, 198, 3031, 132, 2951, 1160, 1595, 1095 )

[node name="InvisableWall3" type="CollisionPolygon2D" parent="BoundingWalls/StaticBody2D"]
position = Vector2( -1387, -324 )
polygon = PoolVector2Array( -366, 682, 951.721, 703.138, 991, 690, 1026, 689, 1089, 725, 1155, 867, 1167, 741, 1265, 706, 1320, 731, 1443, 738, 1501, 735, 1703, 722, 1720, 824, 1756, 864, 1918, 865, 2396, 900, 2361, 1311, 835, 2012, 43, 2262, -1143, 2054, -167, 2052, -163.203, 1389.69, -360, 1267 )

[node name="InvisableWall2" type="CollisionPolygon2D" parent="BoundingWalls/StaticBody2D"]
position = Vector2( 247, -348 )
polygon = PoolVector2Array( 1436, 562, 847, 559, 845, 740, 705, 740, 617, 719, 572, 688, 433, 686, 375, 753, 345, 750, 283, 601, 304, 507, 347, 500, 353, 416, 273, 420, 219, 359, 176, 313, 138, 383, 106, 386, 80, 364, 84, 90, 202, 61, 274, 61, 299, 109, 339, 112, 358, 64, 401, 66, 423, 122, 475, 100, 542, 118, 577, 41, 642, 22, 704, 31, 704, -19, 359, -9, 358, -122, 197, -143, 195, -251, 2648, -481, 2646, 381, 2648, 553, 2482, 558 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BoundingWalls/StaticBody2D"]
position = Vector2( -686, -756 )
polygon = PoolVector2Array( 857, 183, 719, 179, 541, 189, 543, 457, -261, 471, -137, 713, -156, 817, -294, 841, -346, 985, -465, 958, -521, 901, -620, 984, -692, 888, -754, 886, -790, 987, -886, 911, -963, 994, -1026, 970, -1051, 877, -1128, 954, -1259, 961, -1253, 1710, -1431, 1720, -1627, 1717, -1635, 2233, -1450, 2233, -1453, 2295, -1634, 2293, -1633, 2329, -1325, 2330, -1325, 2485, -1634, 2482, -2275, 2877, -2615, 2079, -1642, -17, -416, -21, 1271, -103, 1230, 182 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoundingWalls/StaticBody2D"]
position = Vector2( 1335, 471 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="BoundingWalls/StaticBody2D"]
polygon = PoolVector2Array( -2078, 1534, -2075, 1473, -1934, 1474, -1934, 1277, -1729, 1279, -1728, 1423, -1642, 1424, -1641, 1586, -1889, 1584, -1890, 1619, -2011, 1621, -2009, 1533 )

[node name="WalkingAreas" type="Node2D" parent="."]
visible = false
script = ExtResource( 34 )

[node name="StoneArea" type="Area2D" parent="WalkingAreas"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WalkingAreas/StoneArea"]
polygon = PoolVector2Array( 2930, 101, 962, 135, 953, 437, 519, 437, 519, 59, 325, 49, 330, -642, 224, -639, 237, 41, -149, 54, -144, 249, -1876, 246, -1883, 1008, -2071, 1017, -2078, 1305, -1987, 1312, -1990, 1103, -1802, 1098, -1788, 327, -63, 337, -56, 149, 429, 139, 429, 513, 948, 525, 983, 1088, 3093, 1100 )

[node name="WoodArea" type="Area2D" parent="WalkingAreas"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WalkingAreas/WoodArea"]
position = Vector2( 232.203, -55.1709 )
scale = Vector2( 1.10992, 1.03659 )
polygon = PoolVector2Array( -2137, 1468, -2079, 1467, -2079, 1545, -2137, 1549 )

[node name="MusicAreas" type="Node2D" parent="."]
visible = false
script = ExtResource( 35 )

[node name="VibrantMeadowCursed" type="Area2D" parent="MusicAreas"]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="MusicAreas/VibrantMeadowCursed"]
position = Vector2( -3756, 606 )
polygon = PoolVector2Array( 950, 883, 1631, -618, 3650, -1683, 3643, -26, 3040, 1238, 927, 1184 )

[node name="DialogTriggers" type="Node2D" parent="."]
visible = false

[node name="9" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/9"]
position = Vector2( -2107, 1419 )
shape = SubResource( 4 )

[node name="16" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/16"]
position = Vector2( 124, 92 )
shape = SubResource( 4 )

[node name="10" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/10"]
position = Vector2( -1905, 963 )
shape = SubResource( 4 )

[node name="11" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/11"]
position = Vector2( -1836, 639 )
shape = SubResource( 5 )

[node name="12" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/12"]
position = Vector2( -1302, 268 )
shape = SubResource( 6 )

[node name="13" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/13"]
position = Vector2( 1011, 474 )
shape = SubResource( 6 )

[node name="14" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/14"]
position = Vector2( 1621, 619 )
shape = SubResource( 6 )

[node name="15" type="Area2D" parent="DialogTriggers"]
script = ExtResource( 11 )
dialog_index = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogTriggers/15"]
position = Vector2( -746, 260 )
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DialogTriggers/15"]
position = Vector2( 285, -501 )
shape = SubResource( 6 )

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( -2095, 1537 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 41 )
move_speed = 75

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.5, 0 )
shape = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/WobbleAnimation = ExtResource( 38 )

[node name="FootstepManager" parent="Player" instance=ExtResource( 31 )]

[node name="PlayerDialogController" type="Node2D" parent="Player"]
script = ExtResource( 39 )

[node name="DialogRunner" type="Node2D" parent="Player/PlayerDialogController"]
z_index = 1
script = ExtResource( 4 )
text_lable_path = NodePath("DialogText")
dialogs = [ "A good day to finally get what I need.", "I need this power.", "Once I have this blessing I can make anything.", "The villagers must be at the market by now.", "I do need this. I do need this.", "I don't need to go this way. I need to get to the cabin...", "I'll ask nicely first.", "Surely he'll grant my wish.", "I'm almost there...", "So.... Hungry.", "Need... More.", "Green.. Yellow..", "Red... Blue...", "Family... gone...", "I must Exile... or Death...", "Home... Need Home...", "Color! More MORE!", "" ]
letter_time = 0.1
hide_time = 3.0
random_time_min = 2.0
random_time_max = 7.0

[node name="DialogText" type="Label" parent="Player/PlayerDialogController/DialogRunner"]
margin_left = -252.0
margin_top = 20.0
margin_right = 254.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.439216, 0.439216, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="LetterSoundController" type="Node2D" parent="Player"]
script = ExtResource( 40 )
dialog_path = NodePath("../PlayerDialogController/DialogRunner")

[node name="LetterSoundBox" parent="Player/LetterSoundController" instance=ExtResource( 9 )]
SFX_scenes = [ ExtResource( 49 ), ExtResource( 42 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 47 ), ExtResource( 27 ), ExtResource( 30 ), ExtResource( 45 ), ExtResource( 25 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 28 ), ExtResource( 33 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="Vignette" type="ColorRect" parent="Player/CanvasLayer"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopLayerCursed" type="Node2D" parent="."]

[node name="ForestPathStuffLayer" type="Sprite" parent="TopLayerCursed"]
position = Vector2( -1544, 480 )
scale = Vector2( 3, 3 )
texture = ExtResource( 18 )

[node name="Cabin" type="Sprite" parent="TopLayerCursed"]
position = Vector2( -1937, 1344 )
scale = Vector2( 3, 3 )
texture = ExtResource( 20 )

[node name="Town" type="Sprite" parent="TopLayerCursed"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 24 )

[node name="Villa" type="Sprite" parent="TopLayerCursed"]
position = Vector2( 1912, 462 )
scale = Vector2( 3, 3 )
texture = ExtResource( 23 )

[node name="TopLayer" type="Node2D" parent="."]

[node name="ForestPathStuffLayer" type="Sprite" parent="TopLayer"]
position = Vector2( -1544, 480 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="Cabin" type="Sprite" parent="TopLayer"]
position = Vector2( -1937, 1344 )
scale = Vector2( 3, 3 )
texture = ExtResource( 13 )

[node name="Town" type="Sprite" parent="TopLayer"]
position = Vector2( -8, 0 )
scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="Villa" type="Sprite" parent="TopLayer"]
position = Vector2( 1912, 462 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )

[node name="DoorSFXBad" parent="." instance=ExtResource( 21 )]

[node name="DrainAreas" type="Node2D" parent="."]

[node name="CabinArea" type="Area2D" parent="DrainAreas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrainAreas/CabinArea"]
position = Vector2( -1936, 1346 )
shape = SubResource( 10 )

[node name="ForestPath" type="Area2D" parent="DrainAreas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrainAreas/ForestPath"]
position = Vector2( -1543.5, 478.25 )
shape = SubResource( 11 )

[node name="Town" type="Area2D" parent="DrainAreas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrainAreas/Town"]
position = Vector2( -7, -2.75 )
shape = SubResource( 12 )

[node name="Villa" type="Area2D" parent="DrainAreas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrainAreas/Villa"]
position = Vector2( 1914.75, 454 )
shape = SubResource( 13 )

[connection signal="body_entered" from="WalkingAreas/StoneArea" to="WalkingAreas" method="_on_StoneArea_body_entered"]
[connection signal="body_exited" from="WalkingAreas/StoneArea" to="WalkingAreas" method="_on_StoneArea_body_exited"]
[connection signal="body_entered" from="WalkingAreas/WoodArea" to="WalkingAreas" method="_on_WoodArea_body_entered"]
[connection signal="body_exited" from="WalkingAreas/WoodArea" to="WalkingAreas" method="_on_WoodArea_body_exited"]
[connection signal="body_entered" from="MusicAreas/VibrantMeadowCursed" to="MusicAreas" method="_on_VibrantMeadowCursed_body_entered"]
[connection signal="body_entered" from="DrainAreas/CabinArea" to="." method="_on_CabinArea_body_entered"]
[connection signal="body_entered" from="DrainAreas/ForestPath" to="." method="_on_ForestPath_body_entered"]
[connection signal="body_entered" from="DrainAreas/Town" to="." method="_on_Town_body_entered"]
[connection signal="body_entered" from="DrainAreas/Villa" to="." method="_on_Villa_body_entered"]
